--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "supervisor app.js"
   },
   "author": "caoyi",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "express3-handlebars": "^0.5.2"
+    "express3-handlebars": "^0.5.2",
+    "chai": "~1.9.1"
   },
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.12",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-exec": "^0.4.5",
+    "mocha": "^3.1.2",
+    "zombie": "~2.0.0-alpha31"
   }
 }
